--- a/GHL/GHL.vcxproj
+++ b/GHL/GHL.vcxproj
@@ -70,6 +70,9 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <LibraryPath>..\ThirdParty\lib\DirectStorage;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -104,7 +107,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>..\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\;..\ThirdParty\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
@@ -137,6 +140,8 @@
     <ClInclude Include="CommandSignature.h" />
     <ClInclude Include="d3dx12.h" />
     <ClInclude Include="DDS.h" />
+    <ClInclude Include="DirectStorageFactory.h" />
+    <ClInclude Include="DirectStorageQueue.h" />
     <ClInclude Include="IndirectArgument.h" />
     <ClInclude Include="PipelineState.h" />
     <ClInclude Include="CommandQueue.h" />
@@ -173,6 +178,8 @@
     <ClCompile Include="CommandAllocator.cpp" />
     <ClCompile Include="CommandList.cpp" />
     <ClCompile Include="CommandSignature.cpp" />
+    <ClCompile Include="DirectStorageFactory.cpp" />
+    <ClCompile Include="DirectStorageQueue.cpp" />
     <ClCompile Include="GHLTest.cpp" />
     <ClCompile Include="IndirectArgument.cpp" />
     <ClCompile Include="PipelineState.cpp" />
