--- a/Physics/Physics.vcxproj.filters
+++ b/Physics/Physics.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="PhysicsSystem.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="CustomMemoryHook.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PhysicsSystem.h">
@@ -30,6 +33,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="pbh.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CustomMemoryHook.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
