--- a/OfflineTask/OfflineTask.vcxproj
+++ b/OfflineTask/OfflineTask.vcxproj
@@ -70,6 +70,9 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <LibraryPath>..\ThirdParty\lib;..\ThirdParty\lib\DirectStorage;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -110,6 +113,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>dstorage.lib;assimp-vc142-mt.lib;DirectXTex.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -129,10 +133,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="GeneralTasks.h" />
+    <ClInclude Include="GenerateGrassBlade.h" />
     <ClInclude Include="ResolveHDAFile.h" />
     <ClInclude Include="SplitHeightMap.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="GeneralTasks.cpp" />
+    <ClCompile Include="GenerateGrassBlade.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ResolveHDAFile.cpp" />
     <ClCompile Include="SplitHeightMap.cpp" />
@@ -140,6 +148,12 @@
   <ItemGroup>
     <ProjectReference Include="..\HoudiniApi\HoudiniApi.vcxproj">
       <Project>{ca8adc57-ddad-4332-b6e4-2f8346f0e260}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\Renderer\Renderer.vcxproj">
+      <Project>{caf78c56-cae7-43c5-aace-fb6489240994}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\Tools\Tools.vcxproj">
+      <Project>{174efee4-0e95-429f-bcde-8a04e5ecbee8}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
