--- a/Tools/Tools.vcxproj.filters
+++ b/Tools/Tools.vcxproj.filters
@@ -111,6 +111,9 @@
     <None Include="BuddyAllocator.inl">
       <Filter>头文件\Container</Filter>
     </None>
+    <None Include="LRUCache.inl">
+      <Filter>头文件\Container</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Event.h">
@@ -184,6 +187,9 @@
     </ClInclude>
     <ClInclude Include="TemplateAllocator.h">
       <Filter>头文件\TemplateAllocator</Filter>
+    </ClInclude>
+    <ClInclude Include="LRUCache.h">
+      <Filter>头文件\Container</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
